@@ -278,6 +278,11 @@ Summary of important user-visible changes for version 4.0:
  ** Qt and FLTK graphics toolkit now support offscreen rendering,
     i.e., print will work when figure visibility is off.
 
+ ** Octave now has OpenMP enabled by default if the system provides a
+    working OpenMP implementation.  This allows oct-file modules to take
+    advantage of OpenMP if desired.  This can be disabled when building
+    Octave with the configure option --disable-openmp.
+
 ---------------------------------------------------------
 
 See NEWS.3 for old news.
